--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-amqp==5.1.1
+# amqp==5.1.1
 asgiref==3.5.2
 async-timeout==4.0.2
 billiard==3.6.4.0
-celery==5.2.7
+# celery==5.2.7
 click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
