--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ django-crispy-forms==1.14.0
 django-environ==0.9.0
 django-etc==1.3.1
 django-js-asset==2.0.0
-django-likes==2.0.1
+# django-likes==2.0.1
 django-secretballot==2.0.0
 dj-database-url==1.0.0
 gunicorn==20.1.0
