--- a/requirements.txt
+++ b/requirements.txt
@@ -17,10 +17,10 @@ django-environ==0.9.0
 django-etc==1.3.1
 django-js-asset==2.0.0
 # django-likes==2.0.1
-django-secretballot==2.0.0
+# django-secretballot==2.0.0
 dj-database-url==1.0.0
 gunicorn==20.1.0
-kombu==5.2.4
+# kombu==5.2.4
 packaging==21.3
 Pillow==9.2.0
 prompt-toolkit==3.0.30
@@ -33,6 +33,6 @@ six==1.16.0
 sqlparse==0.4.2
 tzdata==2022.1
 vine==5.0.0
-wcwidth==0.2.5
+# wcwidth==0.2.5
 whitenoise==6.2.0
 wrapt==1.14.1
