--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
 colorama==0.4.5
-decouple==0.0.7
+# decouple==0.0.7
 Deprecated==1.2.13
 Django==4.1
 django-ckeditor==6.5.0
@@ -26,7 +26,7 @@ Pillow==9.2.0
 prompt-toolkit==3.0.30
 psycopg2-binary==2.9.3
 pyparsing==3.0.9
-python-decouple==3.6
+# python-decouple==3.6
 pytz==2022.2.1
 # redis==4.3.4
 six==1.16.0
